--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -21,21 +21,21 @@
         <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+      <p id="featured-property">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
+      <p id="featured-property">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
     <section id="details">
-      <div>
+      <div id="details">
         <h3>Contact</h3>
         <p>
-          <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          <a id="details" href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           +1 710 555 1234<br>
           @fakeRealty
         </p>
       </div>
       
-      <div>
+      <div id="details">
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
@@ -44,21 +44,21 @@
         </p>
       </div>
 
-      <div>
+      <div id="details">
         <h3>Links</h3>
         <p>
-          <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Affordable Mortgages</a><br>
-          <a href="#" target="_blank">Professional Moving Crew</a>
+          <a id="details" href="#" target="_blank">Home Restoration</a><br>
+          <a id="details" href="#" target="_blank">Affordable Mortgages</a><br>
+          <a id="details" href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
 
-      <div>
+      <div id="details">
         <h3>Follow</h3>
         <p>
-          <a href="#" target="_blank">YouTube</a><br>
-          <a href="#" target="_blank">Facebook</a><br>
-          <a href="#" target="_blank">Twitter</a>
+          <a id="details" href="#" target="_blank">YouTube</a><br>
+          <a id="details" href="#" target="_blank">Facebook</a><br>
+          <a id="details" href="#" target="_blank">Twitter</a>
         </p>
       </div>
     </section>
